# Monitoria-CG

./: .gitignore  README.md
codigos-exemplo/Hello-World/: CMakeLists.txt  helloWorld_glfw.cpp  helloWorld_glfw.py  readme.md
codigos-exemplo/Primitivas/: CMakeLists.txt  Primitivas_glfw.cpp
lista-pratica/01-vetores/: CMakeLists.txt  LEIA-ME.md  LEIA-ME.txt  vetores.cpp
